refactor almost all

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
       </div>
       <div class="carousel-inner" id="my-carousel">
         <div class="carousel-item active">
-          <img src="img/backend.png" class="d-block w-100" alt="..." />
+          <img src="img/backend.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-md-block">
             <h5>Learn to Code faster</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/frontend.png" class="d-block w-100" alt="..." />
+          <img src="img/frontend.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-md-block">
             <h5>highly-amusing way to level up your programming skills</h5>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/uiux.png" class="d-block w-100" alt="..." />
+          <img src="img/uiux.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-md-block">
             <h5>project-based learning</h5>
           </div>
