--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon link -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- bootstrap css and js -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" defer></script>
@@ -18,10 +18,10 @@
 
   <body id="home">
     <!-- Navbar here -->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top shadow-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="#home">
-          <img src="https://source.unsplash.com/random/?logo" alt="Logo" width="30" height="24" class="d-inline-block align-text-top rounded-circle" />
+          <img src="img/LOGO.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top rounded-circle" />
         </a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100">
             <li class="nav-item">
-              <a class="nav-link text-black" href="#pricing">Courses</a>
+              <a class="nav-link text-black" href="#courses">Courses</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-black" href="#testimonial">Testimonial</a>
@@ -38,12 +38,37 @@
               <a class="nav-link text-black" href="#contact">Contact Us</a>
             </li>
             <li class="nav-item ms-lg-auto">
-              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Sign in</button>
+              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#loginModal">Sign in</button>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <!-- Login Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body p-2 my-5 justify-content-center d-flex">
+            <form class="w-75" onsubmit="e => e.preventDefault()">
+              <div class="mb-3">
+                <label for="loginEmail" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="loginEmail" aria-describedby="loginEmailHelp" />
+                <div id="loginEmailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              </div>
+              <div class="mb-3">
+                <label for="loginPass" class="form-label">Password</label>
+                <input type="password" class="form-control" id="loginPass" />
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- End of Navbar here -->
 
     <!-- carosel here -->
@@ -89,8 +114,8 @@
     <!-- card here -->
     <main class="container-fluid">
       <!-- Card here -->
-      <section class="container" id="pricing">
-        <div class="row">
+      <section class="container pt-5" id="courses">
+        <div class="row pt-5">
           <div class="col-12 text-center">
             <h1>Courses</h1>
           </div>
@@ -111,15 +136,15 @@
       </section>
       <!-- End of Card here -->
       <div class="my-5" id="spacer"></div>
-      <section class="container" id="testimonial">
-        <div class="row">
+      <section class="container pt-5" id="testimonial">
+        <div class="row pt-5">
           <div class="col-12 text-center">
             <h1>Testimoni</h1>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-10 text-center">
-            <img src="https://source.unsplash.com/asdfasdf" alt="" style="width: 150px; height: 150px" class="rounded-circle" />
+            <img src="img/LOGO.png" alt="" style="width: 150px; height: 150px" class="rounded-circle" />
             <figure class="text-center mt-3">
               <blockquote class="blockquote">
                 <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
@@ -135,15 +160,15 @@
     <div class="my-5" id="spacer"></div>
 
     <!-- contact start here -->
-    <section id="contact" class="container">
-      <div class="row mb-3">
+    <section id="contact" class="container pt-5">
+      <div class="row mb-3 pt-5">
         <div class="col-12 text-center">
           <h1>Contact US</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-6 d-flex justify-content-center w-100">
-          <form class="w-75">
+          <form class="w-75" onsubmit="e => e.preventDefault()">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
