--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <!-- favicon link -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- bootstrap css and js -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" defer></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <script src="js/bootstrap.bundle.min.js" defer></script>
+    <!-- data aos css and js -->
+    <link href="css/aos.css" rel="stylesheet" />
+    <script src="js/aos.js" defer></script>
     <!-- my css -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <!-- my js -->
@@ -18,17 +21,18 @@
 
   <body id="home">
     <!-- Navbar here -->
-    <nav class="navbar navbar-expand-lg fixed-top shadow-sm">
+    <nav class="navbar navbar-expand-lg fixed-top shadow-sm" data-aos="fade-down">
       <div class="container-fluid">
         <a class="navbar-brand" href="#home">
-          <img src="img/LOGO.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top rounded-circle" />
+          <img src="img/LOGO.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top rounded-circle me-1 me-md-2" />
+          Waterio Courses
         </a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100">
-            <li class="nav-item">
+            <li class="nav-item ms-lg-auto">
               <a class="nav-link text-black" href="#courses">Courses</a>
             </li>
             <li class="nav-item">
@@ -37,7 +41,7 @@
             <li class="nav-item">
               <a class="nav-link text-black" href="#contact">Contact Us</a>
             </li>
-            <li class="nav-item ms-lg-auto">
+            <li class="nav-item">
               <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#loginModal">Sign in</button>
             </li>
           </ul>
@@ -108,20 +112,17 @@
       </button>
     </div>
     <!-- End of carosel here -->
-
-    <div class="my-5" id="spacer"></div>
-
     <!-- card here -->
     <main class="container-fluid">
       <!-- Card here -->
-      <section class="container pt-5" id="courses">
+      <section class="container pt-3" id="courses">
         <div class="row pt-5">
           <div class="col-12 text-center">
             <h1>Courses</h1>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-8 my-3">
+          <div class="col-8 col-md-4 my-3">
             <a href="#">
               <div class="card">
                 <img src="img/uiuxcard.jpg" class="card-img-top" alt="UI or UX course" />
@@ -132,22 +133,52 @@
               </div>
             </a>
           </div>
+          <div class="col-8 col-md-4 my-3">
+            <a href="#">
+              <div class="card">
+                <img src="img/frontend.jpg" class="card-img-top" alt="UI or UX course" />
+                <div class="card-body">
+                  <h5 class="card-title">Frontend</h5>
+                  <p class="card-text">Belajar Implementasi Desain Interface</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-8 col-md-4 my-3">
+            <a href="#">
+              <div class="card">
+                <img src="img/backend.jpg" class="card-img-top" alt="UI or UX course" />
+                <div class="card-body">
+                  <h5 class="card-title">Backend</h5>
+                  <p class="card-text">Belajar Membuat Server dan API</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
       <!-- End of Card here -->
-      <div class="my-5" id="spacer"></div>
-      <section class="container pt-5" id="testimonial">
-        <div class="row pt-5">
+      <section class="container pt-4" id="testimonial">
+        <div class="row pt-5 pb-3">
           <div class="col-12 text-center">
             <h1>Testimoni</h1>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-10 text-center">
-            <img src="img/LOGO.png" alt="" style="width: 150px; height: 150px" class="rounded-circle" />
+          <div class="col-10 col-md-5 text-center py-2">
+            <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" />
             <figure class="text-center mt-3">
               <blockquote class="blockquote">
                 <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
+              </blockquote>
+              <figcaption class="blockquote-footer"><cite title="Source Title">Agustian Bonzar</cite></figcaption>
+            </figure>
+          </div>
+          <div class="col-10 col-md-5 text-center py-2">
+            <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" />
+            <figure class="text-center mt-3">
+              <blockquote class="blockquote">
+                <p>Pembelajaran sangat menarik dan sangat intuitif</p>
               </blockquote>
               <figcaption class="blockquote-footer"><cite title="Source Title">Agustian Bonzar</cite></figcaption>
             </figure>
@@ -157,10 +188,8 @@
     </main>
     <!-- End of card here -->
 
-    <div class="my-5" id="spacer"></div>
-
     <!-- contact start here -->
-    <section id="contact" class="container pt-5">
+    <section id="contact" class="container pt-4">
       <div class="row mb-3 pt-5">
         <div class="col-12 text-center">
           <h1>Contact US</h1>
