--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-inner" id="my-carousel">
+      <div class="carousel-inner" id="my-carousel" data-aos="zoom-in">
         <div class="carousel-item active">
           <img src="img/backend.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-md-block">
@@ -116,13 +116,13 @@
     <main class="container-fluid">
       <!-- Card here -->
       <section class="container pt-3" id="courses">
-        <div class="row pt-5">
+        <div class="row pt-5" data-aos="flip-up">
           <div class="col-12 text-center">
             <h1>Courses</h1>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-8 col-md-4 my-3">
+          <div class="col-8 col-md-4 my-3" data-aos="fade-right">
             <a href="#">
               <div class="card">
                 <img src="img/uiuxcard.jpg" class="card-img-top" alt="UI or UX course" />
@@ -133,7 +133,7 @@
               </div>
             </a>
           </div>
-          <div class="col-8 col-md-4 my-3">
+          <div class="col-8 col-md-4 my-3" data-aos="fade-up">
             <a href="#">
               <div class="card">
                 <img src="img/frontend.jpg" class="card-img-top" alt="UI or UX course" />
@@ -144,7 +144,7 @@
               </div>
             </a>
           </div>
-          <div class="col-8 col-md-4 my-3">
+          <div class="col-8 col-md-4 my-3" data-aos="fade-left">
             <a href="#">
               <div class="card">
                 <img src="img/backend.jpg" class="card-img-top" alt="UI or UX course" />
@@ -159,13 +159,13 @@
       </section>
       <!-- End of Card here -->
       <section class="container pt-4" id="testimonial">
-        <div class="row pt-5 pb-3">
+        <div class="row data-aos="flip-up">
           <div class="col-12 text-center">
             <h1>Testimoni</h1>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-10 col-md-5 text-center py-2">
+          <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
             <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" />
             <figure class="text-center mt-3">
               <blockquote class="blockquote">
@@ -174,7 +174,7 @@
               <figcaption class="blockquote-footer"><cite title="Source Title">Agustian Bonzar</cite></figcaption>
             </figure>
           </div>
-          <div class="col-10 col-md-5 text-center py-2">
+          <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
             <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" />
             <figure class="text-center mt-3">
               <blockquote class="blockquote">
@@ -190,35 +190,34 @@
 
     <!-- contact start here -->
     <section id="contact" class="container pt-4">
-      <div class="row mb-3 pt-5">
+      <div class="row mb-3 pt-5" data-aos="flip-up">
         <div class="col-12 text-center">
           <h1>Contact US</h1>
         </div>
       </div>
-      <div class="row">
-        <div class="col-6 d-flex justify-content-center w-100">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-10 d-flex justify-content-center">
           <form class="w-75" onsubmit="e => e.preventDefault()">
-            <div class="mb-3">
+            <div class="mb-3" data-aos="zoom-out-up">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            <div class="mb-3">
+            <div class="mb-3" data-aos="zoom-out-up">
               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" data-aos="zoom-out-up">Submit</button>
           </form>
         </div>
       </div>
     </section>
     <!-- end of contact here -->
-    <div class="my-5" id="spacer"></div>
 
     <!-- footer start here -->
-    <section id="footer" class="container">
-      <footer class="py-5">
-        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+    <section id="footer" class="container" data-aos="fade">
+      <footer class="pt-5">
+        <div class="d-flex flex-column flex-sm-row justify-content-between pt-4 pb-2 border-top">
           <p>© 2022 Company, Inc. All rights reserved.</p>
           <ul class="list-unstyled d-flex">
             <li class="ms-3">
@@ -246,28 +245,5 @@
       </footer>
     </section>
     <!-- end of footer -->
-
-    <section id="will-be-use" class="container text-center">
-      <h1>Will Be Use</h1>
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Launch demo modal</button>
-
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">...</div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
   </body>
 </html>
