--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </section>
       <!-- End of Card here -->
       <section class="container pt-4" id="testimonial">
-        <div class="row data-aos="flip-up">
+        <div class="row pt-5" data-aos="flip-up">
           <div class="col-12 text-center">
             <h1>Testimoni</h1>
           </div>
