12 12 2022 fix footer sm screen and add fab icon like mobile

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         </div>
       </section>
       <!-- End of Card here -->
+
+      <!-- start of testimonial -->
       <section class="container pt-4" id="testimonial">
         <div class="row pt-5" data-aos="flip-up">
           <div class="col-12 text-center">
@@ -218,24 +220,24 @@
     <section id="footer" class="container" data-aos="fade">
       <footer class="pt-5">
         <div class="d-flex flex-column flex-sm-row justify-content-between pt-4 pb-2 border-top">
-          <p>© 2022 Company, Inc. All rights reserved.</p>
+          <p class="fs-6">©2022 JelvinxNeilsen. All rights reserved.</p>
           <ul class="list-unstyled d-flex">
-            <li class="ms-3">
+            <li class="ms-0 ms-md-3">
               <a class="link-dark" href="#github">
                 <img src="img/github-svgrepo-com.svg" alt="github link" />
               </a>
             </li>
-            <li class="ms-3">
+            <li class="ms-1 ms-md-3">
               <a class="link-dark" href="#ig">
                 <img src="img/instagram-svgrepo-com.svg" alt="Instagram Link" />
               </a>
             </li>
-            <li class="ms-3">
+            <li class="ms-1 ms-md-3">
               <a class="link-dark" href="#">
                 <img src="img/twitter-svgrepo-com.svg" alt="Twitter Link" />
               </a>
             </li>
-            <li class="ms-3">
+            <li class="ms-1 ms-md-3">
               <a class="link-dark" href="#">
                 <img src="img/linkedin-svgrepo-com.svg" alt="Linkedin Link" />
               </a>
@@ -245,5 +247,10 @@
       </footer>
     </section>
     <!-- end of footer -->
+    <!-- fab icon for go up -->
+    <a class="fab d-none" data-aos="fade" href="#home">
+      <img src="img/up.svg" alt="Up Arrow" />
+    </a>
+    <!-- ENDfab icon for go up -->
   </body>
 </html>
