12 12 2022 gid for slide1

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     <div class="carousel-inner" id="my-carousel" data-aos="zoom-in">
       <div class="carousel-item active">
-        <img src="img/backend.jpg" class="d-block w-100" alt="..." />
+        <img src="img/slide1.gif" class="d-block w-100" alt="..." />
         <div class="carousel-caption d-md-block">
           <h5>Learn to Code faster</h5>
         </div>
@@ -223,7 +223,7 @@
           <div class="mb-3" data-aos="zoom-out-up">
             <label for="exampleFormControlTextarea1" class="form-label">Message</label>
             <textarea name="message" id="contactUsMessage" class="form-control" id="exampleFormControlTextarea1"
-              rows="2" required></textarea>
+              rows="3" required></textarea>
           </div>
           <div class="row">
             <div class="col d-flex align-items-center">
