--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <!-- End of Navbar here -->
 
   <!-- carosel here -->
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+  <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
@@ -92,22 +92,13 @@
     </div>
     <div class="carousel-inner" id="my-carousel" data-aos="zoom-in">
       <div class="carousel-item active">
-        <img src="img/slide1.gif" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-md-block">
-          <h5>Learn to Code faster</h5>
-        </div>
+        <img src="img/slide1.gif" class="d-block w-100" alt="highly-amusing way to level up your programming skills" />
       </div>
       <div class="carousel-item">
-        <img src="img/frontend.jpg" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-md-block">
-          <h5>highly-amusing way to level up your programming skills</h5>
-        </div>
+        <img src="img/slide2.gif" class="d-block w-100" alt="project-based learning" />
       </div>
       <div class="carousel-item">
-        <img src="img/uiux.jpg" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-md-block">
-          <h5>project-based learning</h5>
-        </div>
+        <img src="img/slide3.gif" class="d-block w-100" alt="learn code faster" />
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -133,7 +124,11 @@
         <div class="col-8 col-md-4 my-3" data-aos="fade-right">
           <a href="#">
             <div class="card">
-              <img src="img/uiuxcard.jpg" class="card-img-top" alt="UI or UX course" />
+              <img src="img/myuiuxcard.png" class="card-img-top" alt="UI or UX course"
+              onmouseover="this.src='img/myuiuxcard.gif'"
+              onmouseout="this.src='img/myuiuxcard.png'"
+              loading="lazy"
+              />
               <div class="card-body">
                 <h5 class="card-title">UI / UX Design</h5>
                 <p class="card-text">Belajar Desain Interface dan Pengalaman User</p>
@@ -144,7 +139,11 @@
         <div class="col-8 col-md-4 my-3" data-aos="fade-up">
           <a href="#">
             <div class="card">
-              <img src="img/frontend.jpg" class="card-img-top" alt="UI or UX course" />
+              <img src="img/myfrontendcard.png" class="card-img-top" alt="UI or UX course" 
+               onmouseover="this.src='img/myfrontendcard.gif'"
+               onmouseout="this.src='img/myfrontendcard.png'"
+               loading="lazy"
+              />
               <div class="card-body">
                 <h5 class="card-title">Frontend</h5>
                 <p class="card-text">Belajar Implementasi Desain Interface</p>
@@ -155,7 +154,11 @@
         <div class="col-8 col-md-4 my-3" data-aos="fade-left">
           <a href="#">
             <div class="card">
-              <img src="img/backend.jpg" class="card-img-top" alt="UI or UX course" />
+              <img src="img/mybackendcard.png" class="card-img-top" alt="UI or UX course"
+               onmouseover="this.src='img/mybackendcard.gif'"
+               onmouseout="this.src='img/mybackendcard.png'"
+               loading="lazy"
+              />
               <div class="card-body">
                 <h5 class="card-title">Backend</h5>
                 <p class="card-text">Belajar Membuat Server dan API</p>
@@ -176,7 +179,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" />
+          <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" loading="lazy" />
           <figure class="text-center mt-3">
             <blockquote class="blockquote">
               <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
@@ -185,7 +188,7 @@
           </figure>
         </div>
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" />
+          <img src="img/LOGO.png" alt="" width="120" height="120" class="rounded-circle" loading="lazy" />
           <figure class="text-center mt-3">
             <blockquote class="blockquote">
               <p>Pembelajaran sangat menarik dan sangat intuitif</p>
@@ -246,22 +249,22 @@
         <ul class="list-unstyled d-flex">
           <li class="ms-0 ms-md-3">
             <a class="link-dark" href="#github">
-              <img src="img/github-svgrepo-com.svg" alt="github link" />
+              <img src="img/github-svgrepo-com.svg" alt="github link" loading="lazy" />
             </a>
           </li>
           <li class="ms-1 ms-md-3">
             <a class="link-dark" href="#ig">
-              <img src="img/instagram-svgrepo-com.svg" alt="Instagram Link" />
+              <img src="img/instagram-svgrepo-com.svg" alt="Instagram Link" loading="lazy" />
             </a>
           </li>
           <li class="ms-1 ms-md-3">
             <a class="link-dark" href="#">
-              <img src="img/twitter-svgrepo-com.svg" alt="Twitter Link" />
+              <img src="img/twitter-svgrepo-com.svg" alt="Twitter Link" loading="lazy" />
             </a>
           </li>
           <li class="ms-1 ms-md-3">
             <a class="link-dark" href="#">
-              <img src="img/linkedin-svgrepo-com.svg" alt="Linkedin Link" />
+              <img src="img/linkedin-svgrepo-com.svg" alt="Linkedin Link" loading="lazy" />
             </a>
           </li>
         </ul>
