16 12 2022 add mycard class to make diff for selected card

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="row justify-content-center">
         <div class="col-8 col-md-4 my-3" data-aos="fade-right">
           <a href="#uiuxmodal" data-bs-toggle="modal">
-            <div class="card">
+            <div class="card mycard">
               <img src="img/myuiuxcard.png" class="card-img-top" alt="UI or UX course"
                 onmouseover="this.src='img/myuiuxcard.gif'" onmouseout="this.src='img/myuiuxcard.png'" loading="lazy" />
               <div class="card-body">
@@ -177,7 +177,8 @@
                   <img src="img/myuiuxcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
                   <div class="card-body">
                     <h5 class="card-title">UI / UX Design</h5>
-                    <p class="card-text">Belajar Desain Interface dan Pengalaman User</p>
+                    <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Desain Interface, Desain Mockup,
+                      hingga kepada Pengalaman User.</p>
                   </div>
                 </div>
               </div>
@@ -187,7 +188,7 @@
         <!-- End of UI UX card modal -->
         <div class="col-8 col-md-4 my-3" data-aos="fade-up">
           <a href="#frontendmodal" data-bs-toggle="modal">
-            <div class="card">
+            <div class="card mycard">
               <img src="img/myfrontendcard.png" class="card-img-top" alt="UI or UX course"
                 onmouseover="this.src='img/myfrontendcard.gif'" onmouseout="this.src='img/myfrontendcard.png'"
                 loading="lazy" />
@@ -198,7 +199,7 @@
             </div>
           </a>
         </div>
-        <!-- UI UX card Modal -->
+        <!-- Frontend card Modal -->
         <div class="modal fade" id="frontendmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
@@ -211,17 +212,19 @@
                   <img src="img/myfrontendcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
                   <div class="card-body">
                     <h5 class="card-title">Frontend</h5>
-                    <p class="card-text">Belajar Implementasi Desain Interface</p>
+                    <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Implementasi Desain Interface ke
+                      dalam kode HTML yang dibantu dengan banyak library css lainnya hingga Hosting terhadap website
+                      yang kita buat.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- End of UI UX card modal -->
+        <!-- End of Frontend card modal -->
         <div class="col-8 col-md-4 my-3" data-aos="fade-left">
           <a href="#backendmodal" data-bs-toggle="modal">
-            <div class="card">
+            <div class="card mycard">
               <img src="img/mybackendcard.png" class="card-img-top" alt="UI or UX course"
                 onmouseover="this.src='img/mybackendcard.gif'" onmouseout="this.src='img/mybackendcard.png'"
                 loading="lazy" />
@@ -232,12 +235,12 @@
             </div>
           </a>
         </div>
-        <!-- UI UX card Modal -->
+        <!-- Backend card Modal -->
         <div class="modal fade" id="backendmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="loginModalLabel">Frontend</h1>
+                <h1 class="modal-title fs-5" id="loginModalLabel">Backend</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
@@ -245,14 +248,15 @@
                   <img src="img/mybackendcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
                   <div class="card-body">
                     <h5 class="card-title">Backend</h5>
-                    <p class="card-text">Belajar Membuat Server dan API</p>
+                    <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Membuat Server hingga membuat
+                      API menggunakan hapijs.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- End of UI UX card modal -->
+        <!-- End of Backend card modal -->
       </div>
     </section>
     <!-- End of Card here -->
