16 12 2022 fix height img modal to right one

--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
                 <h1 class="modal-title fs-5" id="loginModalLabel">UI UX Design</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-5">
                 <div class="card">
-                  <img src="img/myuiuxcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <img src="img/myuiuxcard.gif" height="550" class="card-img-top" alt="UI or UX course"
+                    loading="lazy" />
                   <div class="card-body">
                     <h5 class="card-title">UI / UX Design</h5>
                     <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Desain Interface, Desain Mockup,
@@ -211,9 +212,10 @@
                 <h1 class="modal-title fs-5" id="loginModalLabel">Frontend</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-5">
                 <div class="card">
-                  <img src="img/myfrontendcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <img src="img/myfrontendcard.gif" height="550" class="card-img-top" alt="UI or UX course"
+                    loading="lazy" />
                   <div class="card-body">
                     <h5 class="card-title">Frontend</h5>
                     <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Implementasi Desain Interface ke
@@ -247,9 +249,10 @@
                 <h1 class="modal-title fs-5" id="loginModalLabel">Backend</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1">
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-5">
                 <div class="card">
-                  <img src="img/mybackendcard.gif" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <img src="img/mybackendcard.gif" height="550" class="card-img-top" alt="UI or UX course"
+                    loading="lazy" />
                   <div class="card-body">
                     <h5 class="card-title">Backend</h5>
                     <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Membuat Server hingga membuat
