16 12 2022 jumat add modal to each testimonial person

--- a/index.html
+++ b/index.html
@@ -277,25 +277,84 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/jelvin.jpg" alt="Jelvin Krisna Putra" width="120" height="120" class="rounded-circle"
-            loading="lazy" />
+          <a href="#jelvinModal" data-bs-toggle="modal">
+            <img src="img/jelvin.jpg" alt="Jelvin Krisna Putra" width="120" height="120" class="rounded-circle mycard"
+              loading="lazy" />
+          </a>
           <figure class="text-center mt-3">
-            <blockquote class="blockquote">
-              <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
-            </blockquote>
-            <figcaption class="blockquote-footer"><cite title="Source Title">Jelvin Krisna Putra</cite></figcaption>
+            <a href="#jelvinModal" data-bs-toggle="modal" style="color: black;">
+              <blockquote class="blockquote mycard">
+                <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
+              </blockquote>
+            </a>
+            <a href="#jelvinModal" data-bs-toggle="modal">
+              <figcaption class="blockquote-footer mycard"><cite title="Jelvin Krisna Putra">Jelvin Krisna Putra</cite>
+              </figcaption>
+            </a>
           </figure>
         </div>
+        <!-- Jelvin card Modal -->
+        <div class="modal fade" id="jelvinModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">Jelvin Krisna Putra</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-5">
+                <div class="card">
+                  <img src="img/jelvin.jpg" height="550" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <div class="card-body">
+                    <h5 class="card-title">Backend</h5>
+                    <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Membuat Server hingga membuat
+                      API menggunakan hapijs.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of Jelvin card modal -->
         <div class="col-10 col-md-5 text-center py-2" data-aos="zoom-in-up">
-          <img src="img/neilsen.jpg" alt="Neilsen Nicholas Koma" width="120" height="120" class="rounded-circle"
-            loading="lazy" />
+          <a href="#neilsenModal" data-bs-toggle="modal">
+            <img src="img/neilsen.jpg" alt="Neilsen Nicholas Koma" width="120" height="120"
+              class="rounded-circle mycard" loading="lazy" />
+          </a>
           <figure class="text-center mt-3">
-            <blockquote class="blockquote">
-              <p>Pembelajaran sangat menarik dan sangat intuitif</p>
-            </blockquote>
-            <figcaption class="blockquote-footer"><cite title="Source Title">Neilsen Nicholas Komah</cite></figcaption>
+            <a href="#neilsenModal" data-bs-toggle="modal" style="color: black;">
+              <blockquote class="blockquote mycard">
+                <p>Pembelajaran sangat menarik dan sangat intuitif</p>
+              </blockquote>
+            </a>
+            <a href="#neilsenModal" data-bs-toggle="modal">
+              <figcaption class="blockquote-footer mycard"><cite title="Neilsen Nicholas Komah">Neilsen Nicholas
+                  Komah</cite>
+              </figcaption>
+            </a>
           </figure>
         </div>
+        <!-- Neilsen card Modal -->
+        <div class="modal fade" id="neilsenModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">Neilsen Nicholas Komah</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-5">
+                <div class="card">
+                  <img src="img/neilsen.jpg" height="550" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                  <div class="card-body">
+                    <h5 class="card-title">Backend</h5>
+                    <p class="card-text">Disini Anda Akan Belajar Banyak Hal Mulai dari Membuat Server hingga membuat
+                      API menggunakan hapijs.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End of Neilsen card modal -->
       </div>
     </section>
   </main>
