--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- favicon link -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/Logo.gif" type="image/x-icon" />
   <!-- bootstrap css and js -->
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <script src="js/bootstrap.bundle.min.js" defer></script>
@@ -25,7 +25,9 @@
   <nav class="navbar navbar-expand-lg fixed-top shadow-sm" data-aos="fade-down">
     <div class="container-fluid">
       <a class="navbar-brand" href="#home">
-        <img src="img/LOGO.png" alt="Logo" width="30" height="30"
+        <img src="img/Logo.png" alt="Logo" width="30" height="30"
+        onmouseover="this.src='img/Logo.gif'"
+        onmouseout="this.src='img/Logo.png'"
           class="d-inline-block align-text-top rounded-circle me-1 me-md-2" />
         Waterio Courses
       </a>
