18 12 2022 minggu 1. responsive port card done

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <figure class="text-center mt-3">
               <a href="#jelvinModal" data-bs-toggle="modal" style="color: black">
                 <blockquote class="blockquote mycard">
-                  <p>Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus.</p>
+                  <p id="text-quote">"Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus."</p>
                 </blockquote>
               </a>
               <a href="#jelvinModal" data-bs-toggle="modal">
@@ -277,9 +277,15 @@
                   <h1 class="modal-title fs-5" id="loginModalLabel">Jelvin Krisna Putra</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-2">
-                  <div class="card modal-portfolio-card">
-                    <img src="img/jelvin.jpg" height="550" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-3">
+                  <div class="card modalCard d-md-flex flex-md-row flex-column-reverse">
+                    <div class="card-body flex-column d-flex justify-content-center align-items-center">
+                      <blockquote class="blockquote">
+                        <p id="text-quote">"Pembelajaran sangat membantu saya karena dilakukan dengan cara berbasis studi kasus."</p>
+                      </blockquote>
+                      <figcaption class="blockquote-footer mycard"><cite title="Jelvin Krisna Putra">Jelvin Krisna Putra</cite></figcaption>
+                    </div>
+                    <img src="img/jelvin.jpg" class="card-img-top" alt="UI or UX course" loading="lazy" />
                   </div>
                 </div>
               </div>
@@ -293,7 +299,7 @@
             <figure class="text-center mt-3">
               <a href="#neilsenModal" data-bs-toggle="modal" style="color: black">
                 <blockquote class="blockquote mycard">
-                  <p>Pembelajaran sangat menarik dan sangat intuitif</p>
+                  <p id="text-quote">"Pembelajaran sangat menarik dan sangat intuitif."</p>
                 </blockquote>
               </a>
               <a href="#neilsenModal" data-bs-toggle="modal">
@@ -309,9 +315,15 @@
                   <h1 class="modal-title fs-5" id="loginModalLabel">Neilsen Nicholas Komah</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-2">
-                  <div class="card modal-portfolio-card">
-                    <img src="img/neilsen.jpg" height="550" class="card-img-top" alt="UI or UX course" loading="lazy" />
+                <div class="modal-body my-2 py-4 justify-content-center d-flex flex-grow-1 p-md-3">
+                  <div class="card modalCard d-md-flex flex-md-row flex-column-reverse">
+                    <div class="card-body flex-column d-flex justify-content-center align-items-center">
+                      <blockquote class="blockquote">
+                        <p id="text-quote">"Pembelajaran sangat menarik dan sangat intuitif."</p>
+                      </blockquote>
+                      <figcaption class="blockquote-footer mycard"><cite title="Neilsen Nicholas Komah">Neilsen Nicholas Komah</cite></figcaption>
+                    </div>
+                    <img src="img/neilsen.jpg" class="card-img-top" alt="UI or UX course" loading="lazy" />
                   </div>
                 </div>
               </div>
