18 12 2022 20:29 add learn more button

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                 <div class="card-body">
                   <h5 class="card-title">UI / UX Design</h5>
                   <p class="card-text">Desain Interface dan Pengalaman User</p>
+                  <button type="button" class="btn btn-success">Learn More</button>
                 </div>
               </div>
             </a>
@@ -209,6 +210,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Frontend</h5>
                   <p class="card-text">Implementasi Desain Interface</p>
+                  <button type="button" class="btn btn-success">Learn More</button>
                 </div>
               </div>
             </a>
@@ -241,6 +243,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Backend</h5>
                   <p class="card-text">Membuat Server dan API</p>
+                  <button type="button" class="btn btn-success">Learn More</button>
                 </div>
               </div>
             </a>
